src/objects/test_object_tws__c.object
<CustomObject>
    <fields>
        <fullName>NumberField1Clone1__c</fullName>
        <label>Number Field 1Clone1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberField1Clone2__c</fullName>
        <label>Number Field 1Clone2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Field_2Clone1__c</fullName>
        <label>Number Field 2Clone1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Field_2Clone2__c</fullName>
        <label>Number Field 2Clone2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Text_FieldClone1__c</fullName>
        <defaultValue>&quot;Hi&quot;</defaultValue>
        <label>Required Text FieldClone1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Text_FieldClone2__c</fullName>
        <defaultValue>&quot;Hi&quot;</defaultValue>
        <label>Required Text FieldClone2</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>swde__c</fullName>
        <label>swde</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>test_object_tws</label>
    <nameField>
        <label>test_object_tws Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tws</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>TestRule1</fullName>
        <active>true</active>
        <description>Rule for test</description>
        <errorConditionFormula>swde__c == NULL</errorConditionFormula>
        <errorMessage>message</errorMessage>
    </validationRules>
</CustomObject>